Aligned the coffee icon correctly.

--- a/styles.css
+++ b/styles.css
@@ -16,3 +16,4 @@ a:visited{color: grey;}
 a:hover{color:brown;}
 a:active{color:white;}
 .address{margin-bottom: 5px;}
+img{display:block;margin-left: auto;margin-right: auto;}
